grammar_old/ParGrammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.9 from ParGrammar.y
-----------------------------------------------------------------------------

state 6 contains 1 shift/reduce conflicts.
state 53 contains 1 shift/reduce conflicts.
state 54 contains 1 shift/reduce conflicts.
state 76 contains 3 reduce/reduce conflicts.
state 78 contains 2 shift/reduce conflicts.
state 79 contains 1 shift/reduce conflicts and 2 reduce/reduce conflicts.
state 111 contains 18 reduce/reduce conflicts.
state 113 contains 17 reduce/reduce conflicts.
state 114 contains 1 shift/reduce conflicts and 13 reduce/reduce conflicts.
state 115 contains 16 reduce/reduce conflicts.
state 116 contains 1 shift/reduce conflicts and 12 reduce/reduce conflicts.
state 117 contains 12 reduce/reduce conflicts.
state 118 contains 1 shift/reduce conflicts and 10 reduce/reduce conflicts.
state 130 contains 10 shift/reduce conflicts.
state 156 contains 10 shift/reduce conflicts.
state 157 contains 1 shift/reduce conflicts.
state 159 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	MulOp -> L_MulOp                                   (4)
	AddOp -> L_AddOp                                   (5)
	RelOp -> L_RelOp                                   (6)
	Program -> ListTopDef                              (7)
	ListTopDef ->                                      (8)
	ListTopDef -> TopDef                               (9)
	ListTopDef -> TopDef ';' ListTopDef                (10)
	TopDef -> VDecl                                    (11)
	TopDef -> TDecl                                    (12)
	TopDef -> Def                                      (13)
	TopDef -> Stream                                   (14)
	VDecl -> Ident '::' Type                           (15)
	TDecl -> 'type' Ident 'is' Type                    (16)
	Def -> Ident ListArg '=' Expr                      (17)
	Arg -> Ident                                       (18)
	ListArg ->                                         (19)
	ListArg -> ListArg Arg                             (20)
	ELit -> Integer                                    (21)
	ELit -> String                                     (22)
	ELit -> QIdent                                     (23)
	ELit -> 'true'                                     (24)
	ELit -> 'false'                                    (25)
	ELit -> '()'                                       (26)
	ELit -> '[]'                                       (27)
	Expr11 -> ELit                                     (28)
	Expr11 -> '(' Expr ')'                             (29)
	Expr10 -> '-' Expr10                               (30)
	Expr10 -> '!' Expr10                               (31)
	Expr10 -> Expr11                                   (32)
	Expr9 -> Expr Expr10                               (33)
	Expr9 -> Expr10                                    (34)
	Expr8 -> Expr8 MulOp Expr9                         (35)
	Expr8 -> Expr9                                     (36)
	Expr7 -> Expr7 AddOp Expr8                         (37)
	Expr7 -> Expr8                                     (38)
	Expr6 -> Expr6 RelOp Expr7                         (39)
	Expr6 -> Expr7                                     (40)
	Expr5 -> Expr6 '&' Expr5                           (41)
	Expr5 -> Expr6                                     (42)
	Expr4 -> Expr5 '|' Expr4                           (43)
	Expr4 -> Expr5                                     (44)
	Expr3 -> Expr4 '@' Expr3                           (45)
	Expr3 -> Expr4                                     (46)
	Expr2 -> Expr2 ':' Expr1                           (47)
	Expr2 -> '(' Expr ',' ListExpr ')'                 (48)
	Expr2 -> '[' ListExpr ']'                          (49)
	Expr2 -> '(\\' ListArg '->' Expr ')'               (50)
	Expr2 -> Expr3                                     (51)
	Expr1 -> 'if' Expr 'then' Expr 'else' Expr         (52)
	Expr1 -> 'let' Def 'in' Expr                       (53)
	Expr1 -> 'match' Expr 'with' '{' ListAlternative '}'   (54)
	Expr1 -> Expr2                                     (55)
	Expr -> Expr1 '::' Type                            (56)
	Expr -> Expr1                                      (57)
	ListExpr -> Expr                                   (58)
	ListExpr -> Expr ',' ListExpr                      (59)
	Alternative -> Pattern '->' Expr                   (60)
	ListAlternative -> Alternative                     (61)
	ListAlternative -> Alternative ';' ListAlternative   (62)
	Pattern -> Ident                                   (63)
	Pattern -> '_'                                     (64)
	Pattern -> '(' Pattern ',' ListPattern ')'         (65)
	Pattern -> '[' ListPattern ']'                     (66)
	Pattern -> Integer '@' Pattern                     (67)
	Pattern -> Pattern ':' Pattern                     (68)
	ListPattern -> Pattern                             (69)
	ListPattern -> Pattern ',' ListPattern             (70)
	TBasic -> 'int'                                    (71)
	TBasic -> 'bool'                                   (72)
	TBasic -> 'char'                                   (73)
	TBasic -> 'void'                                   (74)
	TBasic -> Ident                                    (75)
	Type3 -> TBasic                                    (76)
	Type3 -> '(' Type ')'                              (77)
	Type2 -> Type1 '*' Type2                           (78)
	Type2 -> Type3                                     (79)
	Type1 -> Type '+' Type1                            (80)
	Type1 -> Type2                                     (81)
	Type -> Type '->' Type                             (82)
	Type -> '[' Type ']'                               (83)
	Type -> Type1                                      (84)
	Stream -> 'stream' Ident 'input' ListVDecl 'state' ListTopDef 'output' ListTopDef   (85)
	ListVDecl -> VDecl                                 (86)
	ListVDecl -> VDecl ',' ListVDecl                   (87)
	QIdent -> Ident '.' Ident                          (88)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'&'            { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	'()'           { PT _ (TS _ 4) }
	'(\\'          { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	','            { PT _ (TS _ 9) }
	'-'            { PT _ (TS _ 10) }
	'->'           { PT _ (TS _ 11) }
	'.'            { PT _ (TS _ 12) }
	':'            { PT _ (TS _ 13) }
	'::'           { PT _ (TS _ 14) }
	';'            { PT _ (TS _ 15) }
	'='            { PT _ (TS _ 16) }
	'@'            { PT _ (TS _ 17) }
	'['            { PT _ (TS _ 18) }
	'[]'           { PT _ (TS _ 19) }
	']'            { PT _ (TS _ 20) }
	'_'            { PT _ (TS _ 21) }
	'bool'         { PT _ (TS _ 22) }
	'char'         { PT _ (TS _ 23) }
	'else'         { PT _ (TS _ 24) }
	'false'        { PT _ (TS _ 25) }
	'if'           { PT _ (TS _ 26) }
	'in'           { PT _ (TS _ 27) }
	'input'        { PT _ (TS _ 28) }
	'int'          { PT _ (TS _ 29) }
	'is'           { PT _ (TS _ 30) }
	'let'          { PT _ (TS _ 31) }
	'match'        { PT _ (TS _ 32) }
	'output'       { PT _ (TS _ 33) }
	'state'        { PT _ (TS _ 34) }
	'stream'       { PT _ (TS _ 35) }
	'then'         { PT _ (TS _ 36) }
	'true'         { PT _ (TS _ 37) }
	'type'         { PT _ (TS _ 38) }
	'void'         { PT _ (TS _ 39) }
	'with'         { PT _ (TS _ 40) }
	'{'            { PT _ (TS _ 41) }
	'|'            { PT _ (TS _ 42) }
	'}'            { PT _ (TS _ 43) }
	L_ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }
	L_MulOp        { PT _ (T_MulOp $$) }
	L_AddOp        { PT _ (T_AddOp $$) }
	L_RelOp        { PT _ (T_RelOp $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	MulOp           rule  4
	AddOp           rule  5
	RelOp           rule  6
	Program         rule  7
	ListTopDef      rules 8, 9, 10
	TopDef          rules 11, 12, 13, 14
	VDecl           rule  15
	TDecl           rule  16
	Def             rule  17
	Arg             rule  18
	ListArg         rules 19, 20
	ELit            rules 21, 22, 23, 24, 25, 26, 27
	Expr11          rules 28, 29
	Expr10          rules 30, 31, 32
	Expr9           rules 33, 34
	Expr8           rules 35, 36
	Expr7           rules 37, 38
	Expr6           rules 39, 40
	Expr5           rules 41, 42
	Expr4           rules 43, 44
	Expr3           rules 45, 46
	Expr2           rules 47, 48, 49, 50, 51
	Expr1           rules 52, 53, 54, 55
	Expr            rules 56, 57
	ListExpr        rules 58, 59
	Alternative     rule  60
	ListAlternative rules 61, 62
	Pattern         rules 63, 64, 65, 66, 67, 68
	ListPattern     rules 69, 70
	TBasic          rules 71, 72, 73, 74, 75
	Type3           rules 76, 77
	Type2           rules 78, 79
	Type1           rules 80, 81
	Type            rules 82, 83, 84
	Stream          rule  85
	ListVDecl       rules 86, 87
	QIdent          rule  88

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'stream'       shift, and enter state 11
	'type'         shift, and enter state 12
	L_ident        shift, and enter state 2
	%eof           reduce using rule 8

	Ident          goto state 3
	Program        goto state 4
	ListTopDef     goto state 5
	TopDef         goto state 6
	VDecl          goto state 7
	TDecl          goto state 8
	Def            goto state 9
	Stream         goto state 10

State 1


	L_ident        shift, and enter state 2


State 2

	Ident -> L_ident .                                  (rule 1)

	'!'            reduce using rule 1
	'&'            reduce using rule 1
	'('            reduce using rule 1
	'()'           reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'->'           reduce using rule 1
	'.'            reduce using rule 1
	':'            reduce using rule 1
	'::'           reduce using rule 1
	';'            reduce using rule 1
	'='            reduce using rule 1
	'@'            reduce using rule 1
	'[]'           reduce using rule 1
	']'            reduce using rule 1
	'else'         reduce using rule 1
	'false'        reduce using rule 1
	'in'           reduce using rule 1
	'input'        reduce using rule 1
	'is'           reduce using rule 1
	'output'       reduce using rule 1
	'state'        reduce using rule 1
	'then'         reduce using rule 1
	'true'         reduce using rule 1
	'with'         reduce using rule 1
	'|'            reduce using rule 1
	'}'            reduce using rule 1
	L_ident        reduce using rule 1
	L_integ        reduce using rule 1
	L_quoted       reduce using rule 1
	L_MulOp        reduce using rule 1
	L_AddOp        reduce using rule 1
	L_RelOp        reduce using rule 1
	%eof           reduce using rule 1


State 3

	VDecl -> Ident . '::' Type                          (rule 15)
	Def -> Ident . ListArg '=' Expr                     (rule 17)

	'::'           shift, and enter state 17
	'='            reduce using rule 19
	L_ident        reduce using rule 19

	ListArg        goto state 16

State 4

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 5

	Program -> ListTopDef .                             (rule 7)

	%eof           reduce using rule 7


State 6

	ListTopDef -> TopDef .                              (rule 9)
	ListTopDef -> TopDef . ';' ListTopDef               (rule 10)

	';'            shift, and enter state 15
			(reduce using rule 9)

	'output'       reduce using rule 9
	%eof           reduce using rule 9


State 7

	TopDef -> VDecl .                                   (rule 11)

	';'            reduce using rule 11
	'output'       reduce using rule 11
	%eof           reduce using rule 11


State 8

	TopDef -> TDecl .                                   (rule 12)

	';'            reduce using rule 12
	'output'       reduce using rule 12
	%eof           reduce using rule 12


State 9

	TopDef -> Def .                                     (rule 13)

	';'            reduce using rule 13
	'output'       reduce using rule 13
	%eof           reduce using rule 13


State 10

	TopDef -> Stream .                                  (rule 14)

	';'            reduce using rule 14
	'output'       reduce using rule 14
	%eof           reduce using rule 14


State 11

	Stream -> 'stream' . Ident 'input' ListVDecl 'state' ListTopDef 'output' ListTopDef    (rule 85)

	L_ident        shift, and enter state 2

	Ident          goto state 14

State 12

	TDecl -> 'type' . Ident 'is' Type                   (rule 16)

	L_ident        shift, and enter state 2

	Ident          goto state 13

State 13

	TDecl -> 'type' Ident . 'is' Type                   (rule 16)

	'is'           shift, and enter state 35


State 14

	Stream -> 'stream' Ident . 'input' ListVDecl 'state' ListTopDef 'output' ListTopDef    (rule 85)

	'input'        shift, and enter state 34


State 15

	ListTopDef -> TopDef ';' . ListTopDef               (rule 10)

	';'            reduce using rule 8
	'output'       reduce using rule 8
	'stream'       shift, and enter state 11
	'type'         shift, and enter state 12
	L_ident        shift, and enter state 2
	%eof           reduce using rule 8

	Ident          goto state 3
	ListTopDef     goto state 33
	TopDef         goto state 6
	VDecl          goto state 7
	TDecl          goto state 8
	Def            goto state 9
	Stream         goto state 10

State 16

	Def -> Ident ListArg . '=' Expr                     (rule 17)
	ListArg -> ListArg . Arg                            (rule 20)

	'='            shift, and enter state 32
	L_ident        shift, and enter state 2

	Ident          goto state 30
	Arg            goto state 31

State 17

	VDecl -> Ident '::' . Type                          (rule 15)

	'('            shift, and enter state 24
	'['            shift, and enter state 25
	'bool'         shift, and enter state 26
	'char'         shift, and enter state 27
	'int'          shift, and enter state 28
	'void'         shift, and enter state 29
	L_ident        shift, and enter state 2

	Ident          goto state 18
	TBasic         goto state 19
	Type3          goto state 20
	Type2          goto state 21
	Type1          goto state 22
	Type           goto state 23

State 18

	TBasic -> Ident .                                   (rule 75)

	'!'            reduce using rule 75
	'('            reduce using rule 75
	'()'           reduce using rule 75
	')'            reduce using rule 75
	'*'            reduce using rule 75
	'+'            reduce using rule 75
	','            reduce using rule 75
	'-'            reduce using rule 75
	'->'           reduce using rule 75
	':'            reduce using rule 75
	'::'           reduce using rule 75
	';'            reduce using rule 75
	'[]'           reduce using rule 75
	']'            reduce using rule 75
	'else'         reduce using rule 75
	'false'        reduce using rule 75
	'in'           reduce using rule 75
	'output'       reduce using rule 75
	'state'        reduce using rule 75
	'then'         reduce using rule 75
	'true'         reduce using rule 75
	'with'         reduce using rule 75
	'}'            reduce using rule 75
	L_ident        reduce using rule 75
	L_integ        reduce using rule 75
	L_quoted       reduce using rule 75
	%eof           reduce using rule 75


State 19

	Type3 -> TBasic .                                   (rule 76)

	'!'            reduce using rule 76
	'('            reduce using rule 76
	'()'           reduce using rule 76
	')'            reduce using rule 76
	'*'            reduce using rule 76
	'+'            reduce using rule 76
	','            reduce using rule 76
	'-'            reduce using rule 76
	'->'           reduce using rule 76
	':'            reduce using rule 76
	'::'           reduce using rule 76
	';'            reduce using rule 76
	'[]'           reduce using rule 76
	']'            reduce using rule 76
	'else'         reduce using rule 76
	'false'        reduce using rule 76
	'in'           reduce using rule 76
	'output'       reduce using rule 76
	'state'        reduce using rule 76
	'then'         reduce using rule 76
	'true'         reduce using rule 76
	'with'         reduce using rule 76
	'}'            reduce using rule 76
	L_ident        reduce using rule 76
	L_integ        reduce using rule 76
	L_quoted       reduce using rule 76
	%eof           reduce using rule 76


State 20

	Type2 -> Type3 .                                    (rule 79)

	'!'            reduce using rule 79
	'('            reduce using rule 79
	'()'           reduce using rule 79
	')'            reduce using rule 79
	'*'            reduce using rule 79
	'+'            reduce using rule 79
	','            reduce using rule 79
	'-'            reduce using rule 79
	'->'           reduce using rule 79
	':'            reduce using rule 79
	'::'           reduce using rule 79
	';'            reduce using rule 79
	'[]'           reduce using rule 79
	']'            reduce using rule 79
	'else'         reduce using rule 79
	'false'        reduce using rule 79
	'in'           reduce using rule 79
	'output'       reduce using rule 79
	'state'        reduce using rule 79
	'then'         reduce using rule 79
	'true'         reduce using rule 79
	'with'         reduce using rule 79
	'}'            reduce using rule 79
	L_ident        reduce using rule 79
	L_integ        reduce using rule 79
	L_quoted       reduce using rule 79
	%eof           reduce using rule 79


State 21

	Type1 -> Type2 .                                    (rule 81)

	'!'            reduce using rule 81
	'('            reduce using rule 81
	'()'           reduce using rule 81
	')'            reduce using rule 81
	'*'            reduce using rule 81
	'+'            reduce using rule 81
	','            reduce using rule 81
	'-'            reduce using rule 81
	'->'           reduce using rule 81
	':'            reduce using rule 81
	'::'           reduce using rule 81
	';'            reduce using rule 81
	'[]'           reduce using rule 81
	']'            reduce using rule 81
	'else'         reduce using rule 81
	'false'        reduce using rule 81
	'in'           reduce using rule 81
	'output'       reduce using rule 81
	'state'        reduce using rule 81
	'then'         reduce using rule 81
	'true'         reduce using rule 81
	'with'         reduce using rule 81
	'}'            reduce using rule 81
	L_ident        reduce using rule 81
	L_integ        reduce using rule 81
	L_quoted       reduce using rule 81
	%eof           reduce using rule 81


State 22

	Type2 -> Type1 . '*' Type2                          (rule 78)
	Type -> Type1 .                                     (rule 84)

	'!'            reduce using rule 84
	'('            reduce using rule 84
	'()'           reduce using rule 84
	')'            reduce using rule 84
	'*'            shift, and enter state 75
	'+'            reduce using rule 84
	','            reduce using rule 84
	'-'            reduce using rule 84
	'->'           reduce using rule 84
	':'            reduce using rule 84
	'::'           reduce using rule 84
	';'            reduce using rule 84
	'[]'           reduce using rule 84
	']'            reduce using rule 84
	'else'         reduce using rule 84
	'false'        reduce using rule 84
	'in'           reduce using rule 84
	'output'       reduce using rule 84
	'state'        reduce using rule 84
	'then'         reduce using rule 84
	'true'         reduce using rule 84
	'with'         reduce using rule 84
	'}'            reduce using rule 84
	L_ident        reduce using rule 84
	L_integ        reduce using rule 84
	L_quoted       reduce using rule 84
	%eof           reduce using rule 84


State 23

	VDecl -> Ident '::' Type .                          (rule 15)
	Type1 -> Type . '+' Type1                           (rule 80)
	Type -> Type . '->' Type                            (rule 82)

	'+'            shift, and enter state 73
	','            reduce using rule 15
	'->'           shift, and enter state 74
	';'            reduce using rule 15
	'output'       reduce using rule 15
	'state'        reduce using rule 15
	%eof           reduce using rule 15


State 24

	Type3 -> '(' . Type ')'                             (rule 77)

	'('            shift, and enter state 24
	'['            shift, and enter state 25
	'bool'         shift, and enter state 26
	'char'         shift, and enter state 27
	'int'          shift, and enter state 28
	'void'         shift, and enter state 29
	L_ident        shift, and enter state 2

	Ident          goto state 18
	TBasic         goto state 19
	Type3          goto state 20
	Type2          goto state 21
	Type1          goto state 22
	Type           goto state 72

State 25

	Type -> '[' . Type ']'                              (rule 83)

	'('            shift, and enter state 24
	'['            shift, and enter state 25
	'bool'         shift, and enter state 26
	'char'         shift, and enter state 27
	'int'          shift, and enter state 28
	'void'         shift, and enter state 29
	L_ident        shift, and enter state 2

	Ident          goto state 18
	TBasic         goto state 19
	Type3          goto state 20
	Type2          goto state 21
	Type1          goto state 22
	Type           goto state 71

State 26

	TBasic -> 'bool' .                                  (rule 72)

	'!'            reduce using rule 72
	'('            reduce using rule 72
	'()'           reduce using rule 72
	')'            reduce using rule 72
	'*'            reduce using rule 72
	'+'            reduce using rule 72
	','            reduce using rule 72
	'-'            reduce using rule 72
	'->'           reduce using rule 72
	':'            reduce using rule 72
	'::'           reduce using rule 72
	';'            reduce using rule 72
	'[]'           reduce using rule 72
	']'            reduce using rule 72
	'else'         reduce using rule 72
	'false'        reduce using rule 72
	'in'           reduce using rule 72
	'output'       reduce using rule 72
	'state'        reduce using rule 72
	'then'         reduce using rule 72
	'true'         reduce using rule 72
	'with'         reduce using rule 72
	'}'            reduce using rule 72
	L_ident        reduce using rule 72
	L_integ        reduce using rule 72
	L_quoted       reduce using rule 72
	%eof           reduce using rule 72


State 27

	TBasic -> 'char' .                                  (rule 73)

	'!'            reduce using rule 73
	'('            reduce using rule 73
	'()'           reduce using rule 73
	')'            reduce using rule 73
	'*'            reduce using rule 73
	'+'            reduce using rule 73
	','            reduce using rule 73
	'-'            reduce using rule 73
	'->'           reduce using rule 73
	':'            reduce using rule 73
	'::'           reduce using rule 73
	';'            reduce using rule 73
	'[]'           reduce using rule 73
	']'            reduce using rule 73
	'else'         reduce using rule 73
	'false'        reduce using rule 73
	'in'           reduce using rule 73
	'output'       reduce using rule 73
	'state'        reduce using rule 73
	'then'         reduce using rule 73
	'true'         reduce using rule 73
	'with'         reduce using rule 73
	'}'            reduce using rule 73
	L_ident        reduce using rule 73
	L_integ        reduce using rule 73
	L_quoted       reduce using rule 73
	%eof           reduce using rule 73


State 28

	TBasic -> 'int' .                                   (rule 71)

	'!'            reduce using rule 71
	'('            reduce using rule 71
	'()'           reduce using rule 71
	')'            reduce using rule 71
	'*'            reduce using rule 71
	'+'            reduce using rule 71
	','            reduce using rule 71
	'-'            reduce using rule 71
	'->'           reduce using rule 71
	':'            reduce using rule 71
	'::'           reduce using rule 71
	';'            reduce using rule 71
	'[]'           reduce using rule 71
	']'            reduce using rule 71
	'else'         reduce using rule 71
	'false'        reduce using rule 71
	'in'           reduce using rule 71
	'output'       reduce using rule 71
	'state'        reduce using rule 71
	'then'         reduce using rule 71
	'true'         reduce using rule 71
	'with'         reduce using rule 71
	'}'            reduce using rule 71
	L_ident        reduce using rule 71
	L_integ        reduce using rule 71
	L_quoted       reduce using rule 71
	%eof           reduce using rule 71


State 29

	TBasic -> 'void' .                                  (rule 74)

	'!'            reduce using rule 74
	'('            reduce using rule 74
	'()'           reduce using rule 74
	')'            reduce using rule 74
	'*'            reduce using rule 74
	'+'            reduce using rule 74
	','            reduce using rule 74
	'-'            reduce using rule 74
	'->'           reduce using rule 74
	':'            reduce using rule 74
	'::'           reduce using rule 74
	';'            reduce using rule 74
	'[]'           reduce using rule 74
	']'            reduce using rule 74
	'else'         reduce using rule 74
	'false'        reduce using rule 74
	'in'           reduce using rule 74
	'output'       reduce using rule 74
	'state'        reduce using rule 74
	'then'         reduce using rule 74
	'true'         reduce using rule 74
	'with'         reduce using rule 74
	'}'            reduce using rule 74
	L_ident        reduce using rule 74
	L_integ        reduce using rule 74
	L_quoted       reduce using rule 74
	%eof           reduce using rule 74


State 30

	Arg -> Ident .                                      (rule 18)

	'->'           reduce using rule 18
	'='            reduce using rule 18
	L_ident        reduce using rule 18


State 31

	ListArg -> ListArg Arg .                            (rule 20)

	'->'           reduce using rule 20
	'='            reduce using rule 20
	L_ident        reduce using rule 20


State 32

	Def -> Ident ListArg '=' . Expr                     (rule 17)

	'!'            shift, and enter state 57
	'('            shift, and enter state 58
	'()'           shift, and enter state 59
	'(\\'          shift, and enter state 60
	'-'            shift, and enter state 61
	'['            shift, and enter state 62
	'[]'           shift, and enter state 63
	'false'        shift, and enter state 64
	'if'           shift, and enter state 65
	'let'          shift, and enter state 66
	'match'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 69
	L_quoted       shift, and enter state 70

	Ident          goto state 40
	Integer        goto state 41
	String         goto state 42
	ELit           goto state 43
	Expr11         goto state 44
	Expr10         goto state 45
	Expr9          goto state 46
	Expr8          goto state 47
	Expr7          goto state 48
	Expr6          goto state 49
	Expr5          goto state 50
	Expr4          goto state 51
	Expr3          goto state 52
	Expr2          goto state 53
	Expr1          goto state 54
	Expr           goto state 55
	QIdent         goto state 56

State 33

	ListTopDef -> TopDef ';' ListTopDef .               (rule 10)

	';'            reduce using rule 10
	'output'       reduce using rule 10
	%eof           reduce using rule 10


State 34

	Stream -> 'stream' Ident 'input' . ListVDecl 'state' ListTopDef 'output' ListTopDef    (rule 85)

	L_ident        shift, and enter state 2

	Ident          goto state 37
	VDecl          goto state 38
	ListVDecl      goto state 39

State 35

	TDecl -> 'type' Ident 'is' . Type                   (rule 16)

	'('            shift, and enter state 24
	'['            shift, and enter state 25
	'bool'         shift, and enter state 26
	'char'         shift, and enter state 27
	'int'          shift, and enter state 28
	'void'         shift, and enter state 29
	L_ident        shift, and enter state 2

	Ident          goto state 18
	TBasic         goto state 19
	Type3          goto state 20
	Type2          goto state 21
	Type1          goto state 22
	Type           goto state 36

State 36

	TDecl -> 'type' Ident 'is' Type .                   (rule 16)
	Type1 -> Type . '+' Type1                           (rule 80)
	Type -> Type . '->' Type                            (rule 82)

	'+'            shift, and enter state 73
	'->'           shift, and enter state 74
	';'            reduce using rule 16
	'output'       reduce using rule 16
	%eof           reduce using rule 16


State 37

	VDecl -> Ident . '::' Type                          (rule 15)

	'::'           shift, and enter state 17


State 38

	ListVDecl -> VDecl .                                (rule 86)
	ListVDecl -> VDecl . ',' ListVDecl                  (rule 87)

	','            shift, and enter state 107
	'state'        reduce using rule 86


State 39

	Stream -> 'stream' Ident 'input' ListVDecl . 'state' ListTopDef 'output' ListTopDef    (rule 85)

	'state'        shift, and enter state 106


State 40

	QIdent -> Ident . '.' Ident                         (rule 88)

	'.'            shift, and enter state 105


State 41

	ELit -> Integer .                                   (rule 21)

	'!'            reduce using rule 21
	'&'            reduce using rule 21
	'('            reduce using rule 21
	'()'           reduce using rule 21
	')'            reduce using rule 21
	','            reduce using rule 21
	'-'            reduce using rule 21
	':'            reduce using rule 21
	'::'           reduce using rule 21
	';'            reduce using rule 21
	'@'            reduce using rule 21
	'[]'           reduce using rule 21
	']'            reduce using rule 21
	'else'         reduce using rule 21
	'false'        reduce using rule 21
	'in'           reduce using rule 21
	'output'       reduce using rule 21
	'then'         reduce using rule 21
	'true'         reduce using rule 21
	'with'         reduce using rule 21
	'|'            reduce using rule 21
	'}'            reduce using rule 21
	L_ident        reduce using rule 21
	L_integ        reduce using rule 21
	L_quoted       reduce using rule 21
	L_MulOp        reduce using rule 21
	L_AddOp        reduce using rule 21
	L_RelOp        reduce using rule 21
	%eof           reduce using rule 21


State 42

	ELit -> String .                                    (rule 22)

	'!'            reduce using rule 22
	'&'            reduce using rule 22
	'('            reduce using rule 22
	'()'           reduce using rule 22
	')'            reduce using rule 22
	','            reduce using rule 22
	'-'            reduce using rule 22
	':'            reduce using rule 22
	'::'           reduce using rule 22
	';'            reduce using rule 22
	'@'            reduce using rule 22
	'[]'           reduce using rule 22
	']'            reduce using rule 22
	'else'         reduce using rule 22
	'false'        reduce using rule 22
	'in'           reduce using rule 22
	'output'       reduce using rule 22
	'then'         reduce using rule 22
	'true'         reduce using rule 22
	'with'         reduce using rule 22
	'|'            reduce using rule 22
	'}'            reduce using rule 22
	L_ident        reduce using rule 22
	L_integ        reduce using rule 22
	L_quoted       reduce using rule 22
	L_MulOp        reduce using rule 22
	L_AddOp        reduce using rule 22
	L_RelOp        reduce using rule 22
	%eof           reduce using rule 22


State 43

	Expr11 -> ELit .                                    (rule 28)

	'!'            reduce using rule 28
	'&'            reduce using rule 28
	'('            reduce using rule 28
	'()'           reduce using rule 28
	')'            reduce using rule 28
	','            reduce using rule 28
	'-'            reduce using rule 28
	':'            reduce using rule 28
	'::'           reduce using rule 28
	';'            reduce using rule 28
	'@'            reduce using rule 28
	'[]'           reduce using rule 28
	']'            reduce using rule 28
	'else'         reduce using rule 28
	'false'        reduce using rule 28
	'in'           reduce using rule 28
	'output'       reduce using rule 28
	'then'         reduce using rule 28
	'true'         reduce using rule 28
	'with'         reduce using rule 28
	'|'            reduce using rule 28
	'}'            reduce using rule 28
	L_ident        reduce using rule 28
	L_integ        reduce using rule 28
	L_quoted       reduce using rule 28
	L_MulOp        reduce using rule 28
	L_AddOp        reduce using rule 28
	L_RelOp        reduce using rule 28
	%eof           reduce using rule 28


State 44

	Expr10 -> Expr11 .                                  (rule 32)

	'!'            reduce using rule 32
	'&'            reduce using rule 32
	'('            reduce using rule 32
	'()'           reduce using rule 32
	')'            reduce using rule 32
	','            reduce using rule 32
	'-'            reduce using rule 32
	':'            reduce using rule 32
	'::'           reduce using rule 32
	';'            reduce using rule 32
	'@'            reduce using rule 32
	'[]'           reduce using rule 32
	']'            reduce using rule 32
	'else'         reduce using rule 32
	'false'        reduce using rule 32
	'in'           reduce using rule 32
	'output'       reduce using rule 32
	'then'         reduce using rule 32
	'true'         reduce using rule 32
	'with'         reduce using rule 32
	'|'            reduce using rule 32
	'}'            reduce using rule 32
	L_ident        reduce using rule 32
	L_integ        reduce using rule 32
	L_quoted       reduce using rule 32
	L_MulOp        reduce using rule 32
	L_AddOp        reduce using rule 32
	L_RelOp        reduce using rule 32
	%eof           reduce using rule 32


State 45

	Expr9 -> Expr10 .                                   (rule 34)

	'!'            reduce using rule 34
	'&'            reduce using rule 34
	'('            reduce using rule 34
	'()'           reduce using rule 34
	')'            reduce using rule 34
	','            reduce using rule 34
	'-'            reduce using rule 34
	':'            reduce using rule 34
	'::'           reduce using rule 34
	';'            reduce using rule 34
	'@'            reduce using rule 34
	'[]'           reduce using rule 34
	']'            reduce using rule 34
	'else'         reduce using rule 34
	'false'        reduce using rule 34
	'in'           reduce using rule 34
	'output'       reduce using rule 34
	'then'         reduce using rule 34
	'true'         reduce using rule 34
	'with'         reduce using rule 34
	'|'            reduce using rule 34
	'}'            reduce using rule 34
	L_ident        reduce using rule 34
	L_integ        reduce using rule 34
	L_quoted       reduce using rule 34
	L_MulOp        reduce using rule 34
	L_AddOp        reduce using rule 34
	L_RelOp        reduce using rule 34
	%eof           reduce using rule 34


State 46

	Expr8 -> Expr9 .                                    (rule 36)

	'!'            reduce using rule 36
	'&'            reduce using rule 36
	'('            reduce using rule 36
	'()'           reduce using rule 36
	')'            reduce using rule 36
	','            reduce using rule 36
	'-'            reduce using rule 36
	':'            reduce using rule 36
	'::'           reduce using rule 36
	';'            reduce using rule 36
	'@'            reduce using rule 36
	'[]'           reduce using rule 36
	']'            reduce using rule 36
	'else'         reduce using rule 36
	'false'        reduce using rule 36
	'in'           reduce using rule 36
	'output'       reduce using rule 36
	'then'         reduce using rule 36
	'true'         reduce using rule 36
	'with'         reduce using rule 36
	'|'            reduce using rule 36
	'}'            reduce using rule 36
	L_ident        reduce using rule 36
	L_integ        reduce using rule 36
	L_quoted       reduce using rule 36
	L_MulOp        reduce using rule 36
	L_AddOp        reduce using rule 36
	L_RelOp        reduce using rule 36
	%eof           reduce using rule 36


State 47

	Expr8 -> Expr8 . MulOp Expr9                        (rule 35)
	Expr7 -> Expr8 .                                    (rule 38)
